--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.9.0",
+    "@material-tailwind/react": "^2.1.10",
+    "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
     "antd": "^5.20.6",
     "bootstrap": "^5.3.3",
@@ -19,8 +22,10 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
