--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.9.0",
     "@material-tailwind/react": "^2.1.10",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
+    "@react-spring/web": "^9.7.4",
     "antd": "^5.20.6",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.5.4",
@@ -24,6 +26,9 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-scroll-parallax": "^3.4.5",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "tw-elements": "^2.0.0"
   },
