--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,13 @@
     "antd": "^5.20.6",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.5.4",
+    "i18next": "^23.15.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scroll-parallax": "^3.4.5",
